--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -6,8 +6,8 @@
     z-index: 99
 
     > .link > .selfie
-        width: 125px
-        height: 125px
+        width: 50%
+        height: 45%
         margin-bottom: 25px
         border-radius: 100%
         transition: all .2s
