--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -58,3 +58,18 @@
             margin: 1em 0
         .next
             text-align: right
+
+    > .image-caption
+        margin: 2rem auto
+        text-align: center
+
+        img
+            max-width: 100%
+            height: auto
+            border-radius: 4px
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1)
+
+        figcaption
+            font-size: 1.2rem
+            color: $gama
+            margin-top: 1.8rem
