Added Chicago photo spots

--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -73,3 +73,12 @@
             font-size: 1.2rem
             color: $gama
             margin-top: 1.8rem
+
+        &.portrait 
+            img
+                width: 70%
+
+        &.landscape 
+            img
+                width: 100%
+
